--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   font-family: sans-serif;
-  background-image: url(fondo.jpg);
+  background-image: url(nike.jpg);
   background-size: 100vw 100vh;
   background-attachment: fixed;
 }
@@ -16,7 +16,7 @@ body {
   padding: 20px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.3);
   position: relative;
-  background: rgba(255, 255, 255, 0.97);
+  background: rgba(255, 255, 255, 0.70);
 }
 
 .imgLogo {
@@ -27,7 +27,7 @@ body {
   margin: auto;
   margin-top: 1em;
   margin-bottom: 1em;
-  /*border: 1px solid rgba(109, 86, 10, 0.7);*/
+  /*border: 1px solid rgba(109, 86, 10, 0.85);*/
 }
 
 .formulario__titulo,
